# Chrono-Agent

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: pom.xml
backend/src/main/java/ai/chrono/backend/: ChronoBackendApplication.java
backend/src/main/java/ai/chrono/backend/agent/: AgentController.java  AgentMessageRequest.java  AgentService.java  (+1 more)
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V1__core_schema.sql  V2__stream_window_metadata.sql  V3__audio_stream_session_conversation_state.sql  V4__session_post_processing_and_conversation_corrections.sql
backend/src/main/resources/static/: app.js  index.html  styles.css
backend/src/test/java/ai/chrono/backend/: ChronoBackendApplicationTests.java
backend/src/test/resources/: application.yml
docs/superpowers/plans/: 2026-06-11-chrono-agent-mvp.md  2026-06-11-long-stream-audio-windowing-plan.md  2026-06-12-target-flow-gap-remediation-plan.md
docs/superpowers/specs/: 2026-06-11-chrono-agent-demo-flow-design.md  2026-06-11-chrono-agent-design.md  2026-06-11-chrono-agent-technical-solution.md
model-service/: pyproject.toml
model-service/app/: config.py  main.py  schemas.py
model-service/app/providers/: dashvector.py  embedding.py  fake.py  openrouter.py  openrouter_audio.py  voiceprint.py
model-service/app/services/: analyze_audio.py  extract_memory.py  generate_reply.py  safety.py  vector_memory.py
model-service/tests/: test_analyze_audio.py  test_generate_reply.py  test_vector_memory.py
scripts/: verify-long-stream-windowing.ps1  verify-mvp.ps1
(+72 files in other folders)
